<resources>
    <string name="app_name">DSCIntramurosV2</string>
    <string name="theme_name_hint">Theme name...</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--Main-->
    <string name="tab_title_instructions">Instructions</string>
    <string name="tab_title_components">Components</string>
    <string name="tab_title_theme_summary">Theme summary</string>

    <!--Instructions-->
    <string name="instructions_how_to">Build your own custom Material Theme by remixing and styling these themeable components.\n\nModify the variables in your project\'s color.xml, type.xml and shape.xml files to see your custom styles cascade through Material Components for Android.</string>
    <string name="instructions_how_to_title">How to use theme builder</string>
    <string name="instructions_options_title">Theme builder options</string>
    <string name="instructions_enable_dark_title">Enable dark theme</string>

    <!--Component-->
    <string name="text_headline_6">Headline 6</string>
    <string name="text_body_2">Body 2</string>
    <string name="text_button">Button</string>
    <string name="text_overline">Overline</string>

    <string name="button_label_title">Button</string>
    <string name="button_left_button_label">Left</string>
    <string name="button_center_button_label">Center</string>
    <string name="button_right_button_label">Right</string>

    <string name="fab_label_title">FAB</string>

    <string name="card_label_title">Card</string>

    <string name="chip_label_title">Chips</string>
    <string name="chip_action_title">Action</string>
    <string name="chip_filter_title">Filter</string>
    <string name="chip_choice_title">Choice</string>
    <string name="chip_entry_title">Entry</string>

    <string name="top_app_bar_label_title">Top app bar</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>

    <string name="drawer_label_title">Drawer</string>

    <string name="text_field_label_title">Text filed</string>
    <string name="text_field_hint_text">Label</string>

    <string name="bottom_nav_label_title">Bottom navigation</string>
    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_music_title">Music</string>
    <string name="bottom_nav_places_title">Places</string>
    <string name="bottom_nav_news_title">News</string>

    <string name="switch_label_title">Switch</string>

    <string name="radio_button_label_title">Radio button</string>

    <string name="checkbox_label_title">Checkbox</string>

    <string name="bottom_app_bar_label_title">Bottom app bar</string>

    <string name="tabs_label_title">Tabs</string>

    <string name="snackbar_label_title">Snackbar</string>
    <string name="snackbar_message_text">Marked as favorite</string>
    <string name="snackbar_action_text">Action</string>

    <string name="dialog_label_title">Dialog</string>
    <string name="dialog_button_label">Show dialog</string>

    <string name="bottom_sheet_label_title">Bottom sheet</string>
    <string name="bottom_sheet_button_label">Show bottom sheet</string>


    <!--Theme Summary-->
    <string name="label_color_scheme_title">Color scheme</string>

    <string name="label_shape_system_title">Shape system</string>
    <string name="shape_appearance_small_label">S</string>
    <string name="shape_appearance_medium_label">M</string>
    <string name="shape_appearance_large_label">L</string>

    <string name="label_typography_scale_title">Typography scale</string>
    <string name="text_appearance_h1_label">H1</string>
    <string name="text_appearance_h2_label">H2</string>
    <string name="text_appearance_h3_label">H3</string>
    <string name="text_appearance_h4_label">H4</string>
    <string name="text_appearance_h5_label">H5</string>
    <string name="text_appearance_h6_label">H6</string>
    <string name="text_appearance_subtitle_1_label">Subtitle 1</string>
    <string name="text_appearance_subtitle_2_label">Subtitle 2</string>
    <string name="text_appearance_body_1_label">Body 1</string>
    <string name="text_appearance_body_2_label">Body 2</string>
    <string name="text_appearance_button_label">Button</string>
    <string name="text_appearance_caption_label">Caption</string>
    <string name="text_appearance_overline_label">Overline</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seguridad Patrimonial</string>
    <string name="nav_header_subtitle">seguridad intramuros</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plantilla_edit">PlantillaEdit</string>
    <string name="grupo">Grupo</string>
    <string name="turno">Turno</string>
    <string name="guardia">Guardia</string>
    <string name="apostamiento">Apostamiento</string>
    <string-array name="grupos">
        <item>Grupo 1</item>
        <item>Grupo 2</item>
    </string-array>
    <string-array name="turnos">
        <item>12</item>
        <item>24</item>
    </string-array>
    <string-array name="incidencia">
        <item>Tiempo ordinario</item>
        <item>Tiempo extra</item>
        <item>Otro</item>
    </string-array>
    <string-array name="incidencia_tipo">
        <item>N/A</item>
        <item>Falta</item>
        <item>Vacante</item>
        <item>Requerimiento del cliente</item>
        <item>Otro</item>
    </string-array>
    <string-array name="turno">
        <item>12</item>
        <item>24</item>
    </string-array>
    <string-array name="genders">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="roles">
        <item>Guardia</item>
        <item>Jefe de turno</item>
        <item>Jefe de servicio</item>
        <item>Armado</item>
        <item>Otro</item>
    </string-array>
    <string name="genere">Genero</string>
    <string name="grade">Puesto</string>
    <string name="turn">Turno</string>
    <string name="guard_name"><b>Nombre del guardia</b> : %1$s</string>
    <string name="guard_position"><b>Puesto</b>: %1$s</string>
    <string name="create_date"><b>Fecha de alta</b>: %1$s</string>
    <string name="active"><b>Status</b>: %1$s</string>
    <string name="guard_status">Guard status</string>
    <string name="name">Nombre</string>
    <string name="fname">Apellido paterno</string>
    <string name="lname">Apellido materno</string>
    <string name="save_guard_profile">Guardar elemento</string>
    <string name="app_permissions">Permisos</string>
    <string name="app_permissions_denied_message">No se han otorgado los permisos necesarios para que la aplicacion funcione.</string>
    <string name="not_allowed_device">Dispositivo no autorizado</string>
    <string name="search_prompt_hint">Ingrese busqueda</string>
    <string name="provider">Proveedor</string>
    <string name="person">Persona</string>
    <string name="vetado_mane"><b>Nombre :</b> %1$s</string>
    <string name="vetado_provider"><b>Provedor :</b> %1$s</string>
    <string name="vetado_role"><b>Tipo de veto :</b> %1$s</string>
    <string name="vetado_due"><b>Vencimiento :</b> %1$s</string>
    <string name="search_guard">Buscar elemento</string>
    <string name="pie">Parte Informativo Electronico</string>
    <string name="pie_prompt_descrip">Capture los datos que se piden a continuacion.\n Todos los datos son requeridos</string>
    <string name="date">Fecha</string>
    <string name="sec_sem">Semaforo de seguridad</string>
    <string name="gray">Gris</string>
    <string name="green">Verde</string>
    <string name="yellow">Amarillo</string>
    <string name="red">Rojo</string>
    <string name="responsible_identified">Responsable identificado</string>
    <string name="descriptive_table">Tabla descriptiva del evento</string>
    <string name="event_what">¿Que paso?</string>
    <string name="event_how">¿Como paso?</string>
    <string name="event_where">¿Cuando paso?</string>
    <string name="brief_event_description">Breve descripcion de los hechos</string>
    <string name="person_fullname">Nombre completo de quien reporta</string>
    <string name="select_evidence">Evidencia</string>
    <string name="signing">Firmas</string>
    <string name="save_and_continue">Guardar y enviar</string>
    <string name="sign_name">Nombre completo</string>
    <string name="sign_rank">Puesto/Cargo</string>
    <string name="must_fill">Debe capturar toda la informacion</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="com.crashlytics.useFirebaseAppId">true</string>
</resources>
