<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/element_card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.3"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_guard" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guardname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guard_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guard_position" />

            <TextView
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_date" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>