<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            app:srcCompat="@drawable/ic_person_black_55dp"
            tools:srcCompat="@drawable/ic_person_black_55dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vetado_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/vetado_mane"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/vetado_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/vetado_provider" />

            <TextView
                android:id="@+id/vetado_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/vetado_role" />

            <TextView
                android:id="@+id/vetado_restrict_due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/vetado_due" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>